testing/framework/resources/Advanced/Failing/mondrian/query6100.q
select count(distinct name2) from product_cat;
